hphp/hack/test/typecheck/call_in_static_shape.php.exp
File "call_in_static_shape.php", line 7, characters 28-33:
Expected constant expression for initializer (Parsing[1002])
File "call_in_static_shape.php", line 7, characters 28-33:
This call is not allowed because its coeffects are incompatible with the context (Typing[4390])
  File "call_in_static_shape.php", line 7, characters 15-34:
  From this declaration, the context of this function body provides the capability set {}
  File "call_in_static_shape.php", line 4, characters 26-26:
  But the function being called requires the capability set {AccessGlobals, IO, ImplicitPolicyLocal, RxLocal, WriteProperty}
  File "coeffect/contexts.hhi", line 28, characters 1-23:
  Hack provides a list of supported contexts here
