hphp/hack/test/typecheck/call_in_static_shape.php
<?hh // partial

class C {
  public static function f() {
    return "lol";
  }
  static $x = shape('a' => C::f());
}
